--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@ style="background-image: linear-gradient(rgb(208, 245, 0), rgb(255, 238, 0)), ur
             <div class="container">
               <div class="footer-content">
                 <section class="footer-section">
-                  <h3>About Us</h3>
+                  <h3>About Us by napachara pomdee number 26 P.6/1</h3>
                 </section>
               </div>
             </div>
+
           </footer>
