--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@ style="background-image: linear-gradient(rgb(208, 245, 0), rgb(255, 238, 0)), ur
             <div class="container">
               <div class="footer-content">
                 <section class="footer-section">
-                  <h3>About Us by napachara pomdee number 26 P.6/1</h3>
+                  <p>&copy; 2024 Lampang Travel. Made with ❤️ by napachara pomdee number 26 P.6/1</p>
                 </section>
               </div>
             </div>
 
           </footer>
+
