--- a/elephant-center.html
+++ b/elephant-center.html
@@ -173,10 +173,11 @@
     </div>
 
     <div class="footer-bottom">
-      <p>&copy; 2024 Lampang Travel. Made with ❤️ by Grade 6 Students</p>
+     <p>&copy; 2024 Lampang Travel. Made with ❤️ by napachara pomdee number 26 P.6/1</p>
     </div>
   </div>
 </footer>
 
 </body>
+
 </html>
